ipad text alignment fix?

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -43,7 +43,7 @@ body{
   z-index: 3;
   position: fixed;
   overflow:visible;
-  bottom: 40%;
+  bottom: 30%;
   left: 0%;
   max-width: 100%;
   max-height: 100%;
